[project]
name = "diffusion_quantum_demo"
version = "0.1.0"
description = "Quantum diffusion demo environment"
requires-python = ">=3.9"
dependencies = [
  "streamlit",
  "py3Dmol",
  "rdkit-pypi",
  "numpy==1.26.4",
  "matplotlib",
  "qiskit-nature==0.7.2",
  "pyscf",
  "torch",
  "torch-geometric",
  "e3nn",
  "pytorch-lightning",
  "wandb",
  "omegaconf",
  "hydra-core",
  "plotly>=6.2.0",
  "qiskit-terra==0.24.2",
  "qiskit-algorithms==0.2.2",
]

[build-system]
requires = ["hatchling>=1.18"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/diffusion_quantum_demo"]


